# zerofs

./: CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  zerofs-todo.md
.github/: CODEOWNERS
.github/workflows/: coverage.yml
components/wasi-filesystem/client/: Cargo.toml
components/wasi-filesystem/host/: Cargo.toml
components/wasi-filesystem/host/src/: lib.rs
zerofs/: Cargo.toml
zerofs-cli/: Cargo.toml
zerofs-cli/src/: lib.rs
zerofs-fuse/: Cargo.toml
zerofs-fuse/src/: lib.rs
zerofs-nfs/: Cargo.toml
zerofs-nfs/src/: lib.rs
zerofs/src/: capability.rs  dir.rs  entity.rs  error.rs  errors.rs  fs.rs  lib.rs  metadata.rs  store.rs  tmp.rs
zerofs/src/client/: ipc.rs  mod.rs
zerofs/src/config/: config.rs  mod.rs
zerofs/src/filesystem/: builder.rs  capabilities.rs  constant.rs  descriptor.rs  dir.rs  entity.rs  error.rs  file.rs  filesystem.rs  flag.rs  handle.rs  io.rs  kind.rs  link.rs  metadata.rs  mod.rs  path.rs  pathdirs.rs  store.rs  stores.rs  symlink.rs
zerofs/src/filesystem/dir/: dir.rs  mod.rs  op_open_at.rs
zerofs/src/filesystem/file/: file.rs  io.rs  mod.rs  op_read_via_stream.rs  op_write_via_stream.rs
zerofs/src/filesystem/link/: cidlink.rs  link.rs  mod.rs  pathlink.rs  traits.rs
zerofs/src/service/: builder.rs  error.rs  mod.rs  request.rs  service.rs  state_machine.rs
zerofs/src/service/peer/: mod.rs  server.rs
zerofs/src/service/user/: mod.rs
zerofs/src/service/user/http/: mod.rs  router.rs  server.rs
zerofs/src/service/user/http/handler/: authenticate.rs  mod.rs  open_at.rs
zerofs/src/service/user/http/middleware/: authz.rs  mod.rs
zerofs/src/service/user/ipc/: client.rs  mod.rs  server.rs
zerofs/src/store/: block_store.rs  disk_block_store.rs  mem_block_store.rs  mod.rs
zerofs/src/utils/: did_key.rs  fixture.rs  mod.rs
zerofs/tests/: test_ipc.rs
