[workspace]
members = ["zerofs", "zerofs-cli", "zerofs-fuse"]

[workspace.package]
edition = "2018"
version = "0.1.0"
repository = "https://github.com/zerocore-ai/zerofs"
license = "Apache-2.0"
authors = ["Stephen Akinyemi <steve@zerocore.ai>"]

[workspace.dependencies]
async-trait = "0.1.77"
anyhow = "1.0.79"
cid = "0.11.1"
clap = { version = "4.4.8", features = ["derive", "color"] }
did-key = "0.2.1"
futures = "0.3.30"
proptest = "1.4.0"
serde = { version = "1.0.200", features = ["derive"] }
structstruck = "0.4.1"
test-log = { version = "0.2.14", features = ["trace", "tracing-subscriber"] }
thiserror = "1.0.56"
tokio = { version = "1.34.0", features = ["full"] }
toml = "0.8.8"
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
typed-builder = "0.18.0"
ucan = "0.4.0"
zerofs = { path = "zerofs" }
