[workspace]
members = ["zerofs", "zerofs-cli", "zerofs-fuse", "zerofs-nfs"]

[workspace.package]
edition = "2018"
version = "0.1.0"
repository = "https://github.com/zerocore-ai/zerofs"
license = "Apache-2.0"
authors = ["Stephen Akinyemi <steve@zerocore.ai>"]

[workspace.dependencies]
async-trait = "0.1.77"
anyhow = "1.0.79"
bitflags = "2.5.0"
chrono = "0.4.38"
cid = "0.11.1"
clap = { version = "4.4.8", features = ["derive", "color"] }
did-key = "0.2.1"
futures = "0.3.30"
proptest = "1.4.0"
regex = "1.10.4"
serde = { version = "1.0.194", features = ["derive"] }
structstruck = "0.4.1"
test-log = { version = "0.2.14", features = ["trace", "tracing-subscriber"] }
thiserror = "1.0.56"
tokio = { version = "1.34.0", features = ["full"] }
toml = "0.8.8"
tower = "0.4.13"
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
typed-builder = "0.18.0"
zerofs = { path = "zerofs" }
zeroraft = { path = "../zeroraft/zeroraft" }
zeroutils-did-wk = { path = "../zeroutils/zeroutils-did-wk" }
zeroutils-ucan = { path = "../zeroutils/zeroutils-ucan" }
zeroutils-key = { path = "../zeroutils/zeroutils-key" }
zeroutils-config = { path = "../zeroutils/zeroutils-config" }
zeroutils-store = { path = "../zeroutils/zeroutils-store" }
lazy_static = "1.4.0"
