[package]
name = "zerofs"
description = "zerofs is a secure distributed content-addressable file system"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
cid.workspace = true
did-key.workspace = true
structstruck.workspace = true
thiserror.workspace = true
tokio.workspace = true
typed-builder.workspace = true
ucan.workspace = true
shared_memory = "0.12.4"
bytes = "1.6.0"
