[package]
name = "zerofs"
description = "zerofs is a secure distributed content-addressable file system"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
cid = { workspace = true, features = ["serde"] }
structstruck.workspace = true
thiserror.workspace = true
tokio.workspace = true
typed-builder.workspace = true
shared_memory = "0.12.4"
bytes = "1.6.0"
home = "0.5.9"
regex.workspace = true
lazy_static.workspace = true
bitflags = { workspace = true, features = ["serde"] }
axum = { version = "0.7.5", features = ["http2"] }
zeroutils-did-wk.workspace = true
zeroutils-ucan.workspace = true
zeroraft.workspace = true
serde = { workspace = true, features = ["derive"] }
zeroutils-key.workspace = true
zeroutils-store.workspace = true
tower.workspace = true
zeroutils-config.workspace = true
toml.workspace = true
serde_with = "3.8.1"
tracing-subscriber.workspace = true
tracing.workspace = true

[[bin]]
name = "ipc_service"
path = "bin/ipc_service.rs"

[features]
wasi = []

[dev-dependencies]
procspawn = "1.0.0"
rand = "0.8.5"
